<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/kereso"
        android:title="@string/kereses"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/kosar"
        android:title="@string/kosar"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/custom_menu_item"
        >

    </item>
    <item
        android:id="@+id/beallitasok"
        android:title="@string/beallitasok"
        android:icon="@drawable/baseline_app_settings_alt_24"

        app:showAsAction="ifRoom" >
    </item>
    <item
        android:id="@+id/kijelentkezes"
        android:title="@string/kijelentkezes"
        android:icon="@drawable/log_out"
        app:showAsAction="ifRoom" >
    </item>

</menu>